[package]
name = "skyline_rs_template"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
hash40 = "1.3.1"
motion_list_rs = "1.5.0"
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
smash = "0.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
